kubernetes/apps/selfhosted/monica/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monica
  annotations:
    external-dns/is-public: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:account-box
    hajimari.io/group: home
    hajimari.io/appName: Kankei
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-internal-default-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "kankei.${SECRET_DOMAIN}"
      secretName: "kankei.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: kankei.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monica
                port:
                  number: 80
